--- a/compile/index.html
+++ b/compile/index.html
@@ -17,18 +17,157 @@
 
 	</head>
 	<body>
-		<header class="header">
-	
-	
-	
+		
+		<header class="header container">
+
+	<div class="row header__top">
+		<div class="col-md-48 col-lg-17">
+			<div class="header__phone">
+				<span class="header__phone-label">
+					Контактный телефон:
+				</span>
+				<span class="header__phone-num">
+					+7 (495) <strong class="decorate">223-34-21</strong>
+				</span>
+			</div>
+		</div>
+		<div class="col-md-48 col-lg-14">
+			<a class="header__logo" href="index.html">
+				<img src="images/unikum-logo.png" width="236" height="92" />
+			</a>
+		</div>
+		<div class="col-md-48 col-lg-17">
+			<div class="header__social">
+				<span class="header__social-label">
+					Присоединяйтесь
+				</span>
+				<a class="header__social-item" href="">
+					<i class="icons icons--facebook"></i>
+				</a><a class="header__social-item" href="">
+					<i class="icons icons--vkontakte"></i>
+				</a><a class="header__social-item" href="">
+					<i class="icons icons--twitter"></i>
+				</a><a class="header__social-item" href="">
+					<i class="icons icons--instagram"></i>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="row header__bottom">
+		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
+
+			<ul class="nav nav-justified topnav">
+				<li class="topnav__item text-right">
+					<a class="topnav__home active" href="">
+						<i class="icons icons--house-white"></i>
+						<i class="icons icons--house"></i>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a class="orange" href="">
+						<span class="decorate">Ясли</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a class="marine" href="">
+						<span class="decorate">Детский сад</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a class="green" href="">
+						<span class="decorate">Начальная школа</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a href="">
+						<span class="decorate">Доп. услуги</span>
+					</a>
+				</li>
+				<li class="topnav__item">
+					<a href="">
+						<span class="decorate">Контакты</span>
+					</a>
+				</li>
+			</ul>
+
+		</div>
+	</div>
 </header>
 		
 		<div class="content">
 
 			
 
+<div class="container m-b-40">
+	<div class="row">
+		<div class="col-md-48 col-lg-12">
 
+			<ul class="nav leftnav">
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">О нас</span>
+					</a>
+				</li>
+				<li class="leftnav__item active">
+					<a href="">
+						<span class="decorate">Условия приема</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Расположение</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Сотрудники</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Документы</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Новости</span>
+					</a>
+				</li>
+				<li class="leftnav__item">
+					<a href="">
+						<span class="decorate">Оздоровительный центр</span>
+					</a>
+				</li>
+			</ul>
 
+		</div>
+		<div class="col-md-48 col-lg-36">
+			
+			<div id="carousel-example-generic" class="carousel index-carousel slide" data-ride="carousel">
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" />
+						<div class="carousel-caption index-carousel__caption">
+							“Уникум” сегодня - это одна
+							из лучших столичных школ
+						</div>
+					</div>
+					<div class="item">
+						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" />
+						<div class="carousel-caption index-carousel__caption">
+							“Уникум” сегодня - это одна
+							из лучших столичных школ
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+	</div>
+</div>
 		
 		</div>
 
@@ -37,7 +176,7 @@
 	
 	
 </footer>
-
+		
 				
 <script src="javascripts/libs.min.js"></script>
 <script src="javascripts/app.min.js"></script>
