--- a/compile/index.html
+++ b/compile/index.html
@@ -148,14 +148,14 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner" role="listbox">
 					<div class="item active">
-						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" />
+						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" alt="" />
 						<div class="carousel-caption index-carousel__caption">
 							“Уникум” сегодня - это одна
 							из лучших столичных школ
 						</div>
 					</div>
 					<div class="item">
-						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" />
+						<img src="images/pages-images/index/slider/img-1.jpg" width="720" height="350" alt="" />
 						<div class="carousel-caption index-carousel__caption">
 							“Уникум” сегодня - это одна
 							из лучших столичных школ
@@ -165,6 +165,137 @@
 
 			</div>
 
+		</div>
+	</div>
+</div>
+
+<div class="dotblock m-b-60">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-48 col-lg-8">
+				<a class="dotblock__img" href="">
+					<img src="images/iconography/img-1.png" width="175" height="130" alt="" />
+				</a>
+			</div>
+			<div class="col-md-48 col-lg-8">
+				<h3 class="dotblock__title">
+					<a class="orange" href="">
+						<span class="decorate">ЯСЛИ</span>
+					</a>
+				</h3>
+				<p class="dotblock__text">
+					до 8 месяцев
+				</p>
+			</div>
+			<div class="col-md-48 col-lg-8">
+				<a class="dotblock__img" href="">
+					<img src="images/iconography/img-2.png" width="175" height="130" alt="" />
+				</a>
+			</div>
+			<div class="col-md-48 col-lg-8">
+				<h3 class="dotblock__title">
+					<a class="marine" href="">
+						<span class="decorate">ДЕТСКИЙ</span><span class="decorate">САД</span>
+					</a>
+				</h3>
+				<p class="dotblock__text">
+					от 1 до 8 лет
+				</p>
+			</div>
+			<div class="col-md-48 col-lg-8">
+				<a class="dotblock__img" href="">
+					<img src="images/iconography/img-3.png" width="175" height="130" alt="" />
+				</a>
+			</div>
+			<div class="col-md-48 col-lg-8">
+				<h3 class="dotblock__title">
+					<a class="green" href="">
+						<span class="decorate">НАЧАЛЬНАЯ</span><span class="decorate">ШКОЛА</span>
+					</a>
+				</h3>
+				<p class="dotblock__text">
+					от 6 до 14 лет
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container m-b-60">
+	<div class="row">
+		<div class="col-md-48 col-lg-16 p-t-75">
+			<div class="index-special">
+				<a class="index-special__frame" href=""></a>
+			</div>
+		</div>
+		<div class="col-md-48 col-lg-32">
+			<div class="news">
+				
+				<h2 class="news__title m-b-40">
+					Новости<a class="readmore m-l-80" href=""><span class="decorate">Показать все</span><i class="icons icons--readmore"></i></a>
+				</h2>
+
+				<div class="row news__item">
+					<div class="col-md-48 col-lg-11">
+						<a class="news__item-img" href="">
+							<img src="images/pages-images/index/news/img-1.jpg" width="137" height="112" alt="" />
+						</a>
+					</div>
+					<div class="col-md-48 col-lg-37">
+						<span class="news__item-date">
+							22.12.2015
+						</span>
+						<a class="news__item-title" href="">
+							<span class="decorate">
+								В 2015 году выпускники частной школы “Уникум”
+								показали один из лучших результатов сдачи ЕГЭ
+								среди московских школ
+							</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="row news__item">
+					<div class="col-md-48 col-lg-11">
+						<a class="news__item-img" href="">
+							<img src="images/pages-images/index/news/img-2.jpg" width="137" height="112" alt="" />
+						</a>
+					</div>
+					<div class="col-md-48 col-lg-37">
+						<span class="news__item-date">
+							22.12.2015
+						</span>
+						<a class="news__item-title" href="">
+							<span class="decorate">
+								В 2015 году выпускники частной школы “Уникум”
+								показали один из лучших результатов сдачи ЕГЭ
+								среди московских школ
+							</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="row news__item">
+					<div class="col-md-48 col-lg-11">
+						<a class="news__item-img" href="">
+							<img src="images/pages-images/index/news/img-3.jpg" width="137" height="112" alt="" />
+						</a>
+					</div>
+					<div class="col-md-48 col-lg-37">
+						<span class="news__item-date">
+							22.12.2015
+						</span>
+						<a class="news__item-title" href="">
+							<span class="decorate">
+								В 2015 году выпускники частной школы “Уникум”
+								показали один из лучших результатов сдачи ЕГЭ
+								среди московских школ
+							</span>
+						</a>
+					</div>
+				</div>
+
+			</div>
 		</div>
 	</div>
 </div>
