Added Services for index page

--- a/compile/index.html
+++ b/compile/index.html
@@ -221,7 +221,7 @@
 	</div>
 </div>
 
-<div class="container m-b-60">
+<div class="container m-b-20">
 	<div class="row">
 		<div class="col-md-48 col-lg-16 p-t-75">
 			<div class="index-special">
@@ -299,6 +299,99 @@
 		</div>
 	</div>
 </div>
+
+<div class="container">
+	<span class="shadow-line"></span>
+</div>
+
+
+<div class="container addservices m-b-80">
+	
+	<h1 class="addservices__title">
+		Дополнительные услуги
+	</h1>
+	<div class="addservices__anons">
+		<p>
+			На базе школы и детского сада Уникум мы предоставляем
+			<br />
+			дополнительные услуги для наших маленьких воспитанников
+		</p>
+	</div>
+	<div class="row m-t-30">
+		<div class="col-md-48 col-lg-16">
+			<a class="addservices__frame" href="">
+				<span class="addservices__frame-round">
+					<img src="images/pages-images/index/services/img-1.jpg" width="112" height="112" alt="" />
+				</span><span class="addservices__name" href="">
+					<span class="decorate">Детские</span>
+					<br />
+					<span class="decorate">праздники</span>
+				</span>
+			</a>
+		</div>
+		<div class="col-md-48 col-lg-16">
+			<a class="addservices__frame" href="">
+				<span class="addservices__frame-round">
+					<img src="images/pages-images/index/services/img-2.jpg" width="112" height="112" alt="" />
+				</span><span class="addservices__name" href="">
+					<span class="decorate">Трансфер</span>
+				</span>
+			</a>
+		</div>
+		<div class="col-md-48 col-lg-16">
+			<a class="addservices__frame" href="">
+				<span class="addservices__frame-round">
+					<img src="images/pages-images/index/services/img-3.jpg" width="112" height="112" alt="" />
+				</span><span class="addservices__name" href="">
+					<span class="decorate">Няня</span>
+					<br />
+					<span class="decorate">выходного дня</span>
+				</span>
+			</a>
+		</div>
+	</div>
+
+	<div class="row m-t-30">
+		<div class="col-md-48 col-lg-16">
+			<a class="addservices__frame" href="">
+				<span class="addservices__frame-round">
+					<img src="images/pages-images/index/services/img-4.jpg" width="112" height="112" alt="" />
+				</span><span class="addservices__name" href="">
+					<span class="decorate">Консультации</span>
+					<br /> 
+					<span class="decorate">для родителей</span>
+				</span>
+			</a>
+		</div>
+		<div class="col-md-48 col-lg-16">
+			<a class="addservices__frame" href="">
+				<span class="addservices__frame-round">
+					<img src="images/pages-images/index/services/img-5.jpg" width="112" height="112" alt="" />
+				</span><span class="addservices__name" href="">
+					<span class="decorate">Услуги</span>
+					<br />
+					<span class="decorate">логопеда</span>
+				</span>
+			</a>
+		</div>
+		<div class="col-md-48 col-lg-16">
+			<a class="addservices__frame" href="">
+				<span class="addservices__frame-round">
+					<img src="images/pages-images/index/services/img-6.jpg" width="112" height="112" alt="" />
+				</span><span class="addservices__name" href="">
+					<span class="decorate">Школа будущих</span>
+					<br />
+					<span class="decorate">родителей</span>
+				</span>
+			</a>
+		</div>
+	</div>
+
+</div>
+
+
+
+
 		
 		</div>
 
