Complete create index page

--- a/compile/index.html
+++ b/compile/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="col-md-48 col-lg-14">
 			<a class="header__logo" href="index.html">
-				<img src="images/unikum-logo.png" width="236" height="92" />
+				<img src="images/unikum-logo.png" width="236" height="92" alt="" />
 			</a>
 		</div>
 		<div class="col-md-48 col-lg-17">
@@ -322,7 +322,7 @@
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-1.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Детские</span>
 					<br />
 					<span class="decorate">праздники</span>
@@ -333,7 +333,7 @@
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-2.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Трансфер</span>
 				</span>
 			</a>
@@ -342,7 +342,7 @@
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-3.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Няня</span>
 					<br />
 					<span class="decorate">выходного дня</span>
@@ -356,7 +356,7 @@
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-4.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Консультации</span>
 					<br /> 
 					<span class="decorate">для родителей</span>
@@ -367,7 +367,7 @@
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-5.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Услуги</span>
 					<br />
 					<span class="decorate">логопеда</span>
@@ -378,7 +378,7 @@
 			<a class="addservices__frame" href="">
 				<span class="addservices__frame-round">
 					<img src="images/pages-images/index/services/img-6.jpg" width="112" height="112" alt="" />
-				</span><span class="addservices__name" href="">
+				</span><span class="addservices__name">
 					<span class="decorate">Школа будущих</span>
 					<br />
 					<span class="decorate">родителей</span>
@@ -396,9 +396,137 @@
 		</div>
 
 		<footer class="footer">
-	
-	
-	
+	<div class="footer__top">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-48 col-lg-6">
+
+					<a class="footer__logo" href="">
+						<img src="images/unikum-logo-btm.png" width="120" height="120" alt="" />
+					</a>
+
+				</div>
+				<div class="col-md-48 col-lg-11">
+
+					<div class="footer__phone">
+						<span class="footer__phone-label">
+							Контактный телефон:
+						</span>
+						<span class="footer__phone-num">
+							+7 (495) <strong class="decorate">223-34-21</strong>
+						</span>
+					</div>
+					<div class="footer__social pull-left">
+						<span class="footer__social-label">
+							Присоединяйтесь
+						</span>
+						<a class="footer__social-item" href="">
+							<i class="icons icons--facebook"></i>
+						</a><a class="footer__social-item" href="">
+							<i class="icons icons--vkontakte"></i>
+						</a><a class="footer__social-item" href="">
+							<i class="icons icons--twitter"></i>
+						</a><a class="footer__social-item" href="">
+							<i class="icons icons--instagram"></i>
+						</a>
+					</div>
+
+				</div>
+				<div class="col-md-48 col-lg-11">
+
+					<ul class="nav btmnav btmnav--bold">
+						<li class="btmnav__item">
+							<a class="orange" href="">
+								<span class="decorate">Ясли</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a class="marine" href="">
+								<span class="decorate">Детский сад</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a class="green" href="">
+								<span class="decorate">Начальная школа</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Дополнительные</span>
+								<br />
+								<span class="decorate">услуги</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+				<div class="col-md-48 col-lg-10">
+
+					<ul class="nav btmnav">
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">О нас</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Условия приема</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Контакты</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Расположение</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+				<div class="col-md-48 col-lg-10">
+
+					<ul class="nav btmnav">
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Сотрудники</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Документы</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Новости</span>
+							</a>
+						</li>
+						<li class="btmnav__item">
+							<a href="">
+								<span class="decorate">Оздоровительный центр</span>
+							</a>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="footer__bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-48 col-lg-24">
+					&copy; 2015, НОOУ Санаторно-лесная школа <a href="">Уникум</a>
+				</div>
+				<div class="col-md-48 col-lg-24 text-right">
+					Разработка сайта &mdash; <a href="http://www.spacebox.ru">Spacebox</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
 		
 				
