Save changes for about page

--- a/compile/about.html
+++ b/compile/about.html
@@ -139,6 +139,10 @@
 					</a>
 				</li>
 			</ul>
+			
+			<div class="special m-t-60">
+				
+			</div>
 
 		</div>
 		<div class="col-md-48 col-lg-36">
