Menu template change

--- a/compile/about.html
+++ b/compile/about.html
@@ -55,40 +55,40 @@
 	</div>
 	<div class="row header__bottom">
 		<div class="col-md-48 col-lg-42 col-lg-offset-3 p-l-15">
-
+			
 			<ul class="nav nav-justified topnav">
-				<li class="topnav__item text-right">
-					<a class="topnav__home active" href="">
-						<i class="icons icons--house-white"></i>
-						<i class="icons icons--house"></i>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a class="orange" href="">
-						<span class="decorate">Ясли</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a class="marine" href="">
-						<span class="decorate">Детский сад</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a class="green" href="">
-						<span class="decorate">Начальная школа</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a href="">
-						<span class="decorate">Доп. услуги</span>
-					</a>
-				</li>
-				<li class="topnav__item">
-					<a href="">
-						<span class="decorate">Контакты</span>
-					</a>
-				</li>
-			</ul>
+	<li class="topnav__item text-right">
+		<a class="topnav__home " href="">
+			<i class="icons icons--house-white"></i>
+			<i class="icons icons--house"></i>
+		</a>
+	</li>
+	<li class="topnav__item ">
+		<a class="orange" href="">
+			<span class="decorate">Ясли</span>
+		</a>
+	</li>
+	<li class="topnav__item ">
+		<a class="marine" href="">
+			<span class="decorate">Детский сад</span>
+		</a>
+	</li>
+	<li class="topnav__item ">
+		<a class="green" href="">
+			<span class="decorate">Начальная школа</span>
+		</a>
+	</li>
+	<li class="topnav__item ">
+		<a href="">
+			<span class="decorate">Доп. услуги</span>
+		</a>
+	</li>
+	<li class="topnav__item ">
+		<a href="">
+			<span class="decorate">Контакты</span>
+		</a>
+	</li>
+</ul>
 
 		</div>
 	</div>
@@ -101,45 +101,45 @@
 <div class="container m-b-40">
 	<div class="row">
 		<div class="col-md-48 col-lg-12">
-
-			<ul class="nav leftnav">
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">О нас</span>
-					</a>
-				</li>
-				<li class="leftnav__item active">
-					<a href="">
-						<span class="decorate">Условия приема</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Расположение</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Сотрудники</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Документы</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Новости</span>
-					</a>
-				</li>
-				<li class="leftnav__item">
-					<a href="">
-						<span class="decorate">Оздоровительный центр</span>
-					</a>
-				</li>
-			</ul>
 			
+			<ul class="nav leftnav">
+	<li class="leftnav__item active">
+		<a href="">
+			<span class="decorate">О нас</span>
+		</a>
+	</li>
+	<li class="leftnav__item ">
+		<a href="">
+			<span class="decorate">Условия приема</span>
+		</a>
+	</li>
+	<li class="leftnav__item ">
+		<a href="">
+			<span class="decorate">Расположение</span>
+		</a>
+	</li>
+	<li class="leftnav__item ">
+		<a href="">
+			<span class="decorate">Сотрудники</span>
+		</a>
+	</li>
+	<li class="leftnav__item ">
+		<a href="">
+			<span class="decorate">Документы</span>
+		</a>
+	</li>
+	<li class="leftnav__item ">
+		<a href="">
+			<span class="decorate">Новости</span>
+		</a>
+	</li>
+	<li class="leftnav__item ">
+		<a href="">
+			<span class="decorate">Оздоровительный центр</span>
+		</a>
+	</li>
+</ul>
+
 			<div class="special m-t-60">
 				
 			</div>
