--- a/compile/index.html
+++ b/compile/index.html
@@ -104,7 +104,7 @@
 			
 			<ul class="nav leftnav">
 	<li class="leftnav__item ">
-		<a href="">
+		<a href="about.html">
 			<span class="decorate">О нас</span>
 		</a>
 	</li>
@@ -129,7 +129,7 @@
 		</a>
 	</li>
 	<li class="leftnav__item ">
-		<a href="">
+		<a href="news.html">
 			<span class="decorate">Новости</span>
 		</a>
 	</li>
