--- a/compile/index.html
+++ b/compile/index.html
@@ -134,7 +134,7 @@
 		</a>
 	</li>
 	<li class="leftnav__item ">
-		<a href="">
+		<a href="health-center.html">
 			<span class="decorate">Оздоровительный центр</span>
 		</a>
 	</li>
