--- a/compile/health-center - копия.html
+++ b/compile/health-center - копия.html
@@ -103,8 +103,8 @@
 		<div class="col-md-48 col-lg-12">
 			
 			<ul class="nav leftnav">
-	<li class="leftnav__item active">
-		<a href="">
+	<li class="leftnav__item ">
+		<a href="about.html">
 			<span class="decorate">О нас</span>
 		</a>
 	</li>
@@ -129,12 +129,12 @@
 		</a>
 	</li>
 	<li class="leftnav__item ">
-		<a href="">
+		<a href="news.html">
 			<span class="decorate">Новости</span>
 		</a>
 	</li>
-	<li class="leftnav__item ">
-		<a href="">
+	<li class="leftnav__item active">
+		<a href="health-center.html">
 			<span class="decorate">Оздоровительный центр</span>
 		</a>
 	</li>
@@ -148,156 +148,131 @@
 		<div class="col-md-48 col-lg-36">
 			
 			<div class="page">
-				<div class="about">
-					<h1 class="about__title">
-						О нас
+
+				<div class="health-center">
+					
+					<h1 class="health-center__title">
+						Оздоровительный центр
 					</h1>
-					<div class="about__anons">
+					
+					<div class="health-center__anons">
 						<p>
-							Санаторно-лесная школа — общеобразовательное учебное заведение, предназначенное для обучения детей дошкольного
-							и школьного возраста (с 2 до 14 лет). Учебные занятия строятся
-							с учётом двух важных положений: необходимости обучения
-							по программе общеобразовательной школы и использования образовательного процесса с оздоровительной целью. 
+							На базе школы и детского сада Уникум предоставляются дополнительные услуги для детей и их родителей. Воспользоваться услугами может любой желающий.
 						</p>
 					</div>
-					<p>
-						Вновь строящиеся здания с-л-ш размещают вблизи лесных, лесопарковых массивов на обособленных земельных участках, а также на внутриквартальных территориях жилых микрорайонов
-					</p>
-					<br />
-					<h2 class="about__title">
-						История создания
-					</h2>
-					<p>
-						<img class="pull-right" src="images/pages-images/about/img-1.jpg" width="282" height="230" alt="" />
-						Санаторно-лесная школа — 
-						общеобразовательное учебное заведение, 
-						предназначенное для обучения детей 
-						дошкольного и школьного возраста
-						(с 2 до 14 лет).
-					</p>
-					<p>
-						Учебные занятия строятся с учётом двух 
-						важных положений: необходимости обучения по программе общеобразовательной школы	и использования образовательного процесса
-						с оздоровительной целью
-					</p>
-					<p>
-						Вновь строящиеся здания с-л-ш размещают вблизи лесных, лесопарковых массивов на обособленных земельных участках, а также на внутриквартальных территориях жилых микрорайонов
-					</p>
-					<br />
-					<h2 class="about__title">
-						“Уникум“ в цифрах
-					</h2>
-					<div class="row about__nums">
-						<div class="col-md-48 col-lg-24">
-							<span class="about__num about__num--green about__num--green-frame">
-								81
-							</span>						
-							<span class="about__num about__num--green">
-								81
-							</span>
-							<div class="about__anons">
+
+					<div class="row health-center__item">
+						<div class="col-md-48 col-lg-12">
+							<a href="">
+								<img class="health-center__item-frame" src="images/pages-images/centr/img-1.jpg" width="112" height="112" alt />
+							</a>
+						</div>
+						<div class="col-md-48 col-lg-36">
+							<h2 class="health-center__item-name">
+								<a class="decorate" href="">
+									Массаж для детей и взрослых
+								</a>
+							</h2>
+							<div class="health-center__item-text">
 								<p>
-									Общее число педагогических работников
+									Организация детских праздников, которые включают 
+									в себя аниматоров, использование индивидуальных 
+									сценариев, живой звук, оформление.
 								</p>
 							</div>
-							<p class="about__nums-title">
-								Из них имеют:
-							</p>
-							<ul>
-								<li>
-									Высшую категорию - 31 чел.
-								</li>
-								<li>
-									Первую категорию - 14 чел.
-								</li>
-								<li>
-									Вторую категорию - 13 чел.
-								</li>
-								<li>
-									Другое - 24 чел
-								</li>
-							</ul>
 						</div>
-						<div class="col-md-48 col-lg-24">
-							<span class="about__num about__num--blue about__num--blue-frame">
-								99
-							</span>						
-							<span class="about__num about__num--blue">
-								99
-							</span>
-							<div class="about__anons">
+					</div>
+
+					<div class="row health-center__item">
+						<div class="col-md-48 col-lg-12">
+							<a href="">
+								<img class="health-center__item-frame" src="images/pages-images/centr/img-2.jpg" width="112" height="112" alt />
+							</a>
+						</div>
+						<div class="col-md-48 col-lg-36">
+							<h2 class="health-center__item-name">
+								<a class="decorate" href="">
+									Лечебная физкультура
+								</a>
+							</h2>
+							<div class="health-center__item-text">
 								<p>
-									Общее число сотрудников школы
+									Организация детских праздников, которые включают 
+									в себя аниматоров, использование индивидуальных 
+									сценариев, живой звук, оформление.
 								</p>
 							</div>
-							<ul>
-								<li>
-									Доктор наук – 2
-								</li>
-								<li>
-									Кандидат наук – 3
-								</li>
-								<li>
-									Доцент ин. яз. и культурологии – 1
-								</li>
-								<li>
-									Почетный работник общего 
-								</li>
-								<li>
-									образования РФ – 3
-								</li>
-							</ul>
-							<a class="about__readmore" href=""><span class="decorate">Посмотреть весь перечень</span></a>
 						</div>
 					</div>
-					<br />
-					<h2 class="about__title">
-						“Уникум“ в цифрах
-					</h2>
-					<p>
-						<img class="pull-right" src="images/pages-images/about/img-2.jpg" width="282" height="230" alt="" />
-						Санаторно-лесная школа — 
-						общеобразовательное учебное заведение, 
-						предназначенное для обучения детей 
-						дошкольного и школьного возраста
-						(с 2 до 14 лет).
-					</p>
-					<p>
-						Учебные занятия строятся с учётом двух 
-						важных положений: необходимости обучения по программе общеобразовательной школы
-						и использования образовательного процесса
-						с оздоровительной целью
-					</p>
-					<p>
-						Вновь строящиеся здания с-л-ш размещают вблизи лесных, лесопарковых массивов на обособленных земельных участках, а также на внутриквартальных территориях жилых микрорайонов
-					</p>
-					<br />
-					<h2 class="about__title">
-						Планы
-					</h2>
-					<p>
-						<img class="pull-right" src="images/pages-images/about/img-3.jpg" width="282" height="230" alt="" />
-						Санаторно-лесная школа — 
-						общеобразовательное учебное заведение, 
-						предназначенное для обучения детей 
-						дошкольного и школьного возраста
-						(с 2 до 14 лет).
-					</p>
-					<p>
-						Учебные занятия строятся с учётом двух 
-						важных положений: необходимости обучения по программе общеобразовательной школы и использования образовательного процесса
-						с оздоровительной целью
-					</p>
-					<p>
-						Вновь строящиеся здания с-л-ш размещают вблизи лесных, лесопарковых массивов на обособленных земельных участках, а также на внутриквартальных территориях жилых микрорайонов
-					</p>
-					<br />
-					<div class="about__anons">
-						<p>
-							«Уникум» ставит своей задачей создание условий и возможностей для развития и совершенствования образовательного процесса в России, что является важнейшей общегосударственной задачей в деле возрождения, развития и процветания нашего государства.
-						</p>
+
+					<div class="row health-center__item">
+						<div class="col-md-48 col-lg-12">
+							<a href="">
+								<img class="health-center__item-frame" src="images/pages-images/centr/img-3.jpg" width="112" height="112" alt />
+							</a>
+						</div>
+						<div class="col-md-48 col-lg-36">
+							<h2 class="health-center__item-name">
+								<a class="decorate" href="">
+									Бассейн + сауна + фитобар
+								</a>
+							</h2>
+							<div class="health-center__item-text">
+								<p>
+									Организация детских праздников, которые включают 
+									в себя аниматоров, использование индивидуальных 
+									сценариев, живой звук, оформление.
+								</p>
+							</div>
+						</div>
 					</div>
+
+					<div class="row health-center__item">
+						<div class="col-md-48 col-lg-12">
+							<a href="">
+								<img class="health-center__item-frame" src="images/pages-images/centr/img-4.jpg" width="112" height="112" alt />
+							</a>
+						</div>
+						<div class="col-md-48 col-lg-36">
+							<h2 class="health-center__item-name">
+								<a class="decorate" href="">
+									Йога для малышей
+								</a>
+							</h2>
+							<div class="health-center__item-text">
+								<p>
+									Организация детских праздников, которые включают 
+									в себя аниматоров, использование индивидуальных 
+									сценариев, живой звук, оформление.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row health-center__item">
+						<div class="col-md-48 col-lg-12">
+							<a href="">
+								<img class="health-center__item-frame" src="images/pages-images/centr/img-5.jpg" width="112" height="112" alt />
+							</a>
+						</div>
+						<div class="col-md-48 col-lg-36">
+							<h2 class="health-center__item-name">
+								<a class="decorate" href="">
+									Йога для будущих мам
+								</a>
+							</h2>
+							<div class="health-center__item-text">
+								<p>
+									Организация детских праздников, которые включают 
+									в себя аниматоров, использование индивидуальных 
+									сценариев, живой звук, оформление.
+								</p>
+							</div>
+						</div>
+					</div>
+
 				</div>
+
 			</div>
 
 		</div>
