--- a/compile/health-center.html
+++ b/compile/health-center.html
@@ -124,7 +124,7 @@
 		</a>
 	</li>
 	<li class="leftnav__item ">
-		<a href="">
+		<a href="docs.html">
 			<span class="decorate">Документы</span>
 		</a>
 	</li>
