Edit page employees.html

--- a/compile/employees.html
+++ b/compile/employees.html
@@ -196,217 +196,226 @@
 					<h1 class="employees__subtitle">
 						Педагоги
 					</h1>
-					<div class="row">
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-2.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Константинопольский
-								<br />
-								Константин
-								<br />
-								Константинович
-							</span>
-							<span class="employees__item-post">
-								Воспитатель младшей
-								<br />
-								группы
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-3.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Коломицын
-								<br />
-								Андрей
-								<br />
-								Сергеевич
-							</span>
-							<span class="employees__item-post">
-								Воспитатель младшей
-								<br />
-								группы
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-4.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Алексаднрова
-								<br />
-								Зоя
-								<br />
-								Викторовна
-							</span>
-							<span class="employees__item-post">
-								Воспитатель младшей
-								<br />
-								группы
-							</span>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-5.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Барабасов
-								<br />
-								Карабас
-								<br />
-								Святозарович
-							</span>
-							<span class="employees__item-post">
-								Воспитатель младшей
-								<br />
-								группы
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-6.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Максимов
-								<br />
-								Виталий
-								<br />
-								Кличкович
-							</span>
-							<span class="employees__item-post">
-								Логопед, преподаватель
-								<br />
-								ритмики
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-7.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Морозов
-								<br />
-								Николай
-								<br />
-								Николаевич
-							</span>
-							<span class="employees__item-post">
-								Помощник воспитателя
-								<br />
-								младшей группы
-							</span>
+					<div class="employees__line">
+						<div class="row">
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-2.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Константинопольский
+									<br />
+									Константин
+									<br />
+									Константинович
+								</span>
+								<span class="employees__item-post">
+									Воспитатель младшей
+									<br />
+									группы
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-3.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Коломицын
+									<br />
+									Андрей
+									<br />
+									Сергеевич
+								</span>
+								<span class="employees__item-post">
+									Воспитатель младшей
+									<br />
+									группы
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-4.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Алексаднрова
+									<br />
+									Зоя
+									<br />
+									Викторовна
+								</span>
+								<span class="employees__item-post">
+									Воспитатель младшей
+									<br />
+									группы
+								</span>
+							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-8.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Константинопольский
-								<br />
-								Константин
-								<br />
-								Константинович
-							</span>
-							<span class="employees__item-post">
-								Воспитатель младшей
-								<br />
-								группы
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-9.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Коломицын
-								<br />
-								Андрей
-								<br />
-								Сергеевич
-							</span>
-							<span class="employees__item-post">
-								Логопед, преподаватель
-								<br />
-								ритмики
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-10.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Константинопольский
-								<br />
-								Константин
-								<br />
-								Константинович
-							</span>
-							<span class="employees__item-post">
-								Преподаватель 
-								<br />
-								Английского языка 
-							</span>
+					<div class="employees__line">
+						<div class="row">
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-5.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Барабасов
+									<br />
+									Карабас
+									<br />
+									Святозарович
+								</span>
+								<span class="employees__item-post">
+									Воспитатель младшей
+									<br />
+									группы
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-6.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Максимов
+									<br />
+									Виталий
+									<br />
+									Кличкович
+								</span>
+								<span class="employees__item-post">
+									Логопед, преподаватель
+									<br />
+									ритмики
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-7.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Морозов
+									<br />
+									Николай
+									<br />
+									Николаевич
+								</span>
+								<span class="employees__item-post">
+									Помощник воспитателя
+									<br />
+									младшей группы
+								</span>
+							</div>
 						</div>
 					</div>
+					<div class="employees__line">
+						<div class="row">
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-8.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Константинопольский
+									<br />
+									Константин
+									<br />
+									Константинович
+								</span>
+								<span class="employees__item-post">
+									Воспитатель младшей
+									<br />
+									группы
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-9.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Коломицын
+									<br />
+									Андрей
+									<br />
+									Сергеевич
+								</span>
+								<span class="employees__item-post">
+									Логопед, преподаватель
+									<br />
+									ритмики
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-10.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Константинопольский
+									<br />
+									Константин
+									<br />
+									Константинович
+								</span>
+								<span class="employees__item-post">
+									Преподаватель 
+									<br />
+									Английского языка 
+								</span>
+							</div>
+						</div>
+					</div>
+					<br />
 					<h1 class="employees__subtitle">
 						Сотрудники
 					</h1>
-					<div class="row">
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-11.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Коломицын
-								<br />
-								Андрей
-								<br />
-								Сергеевич
-							</span>
-							<span class="employees__item-post">
-								Начальник службы
-								<br />
-								безопасности
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-12.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Максимов
-								<br />
-								Виталий
-								<br />
-								Кличкович
-							</span>
-							<span class="employees__item-post">
-								Сотрудник службы
-								<br />
-								охраны
-							</span>
-						</div>
-						<div class="col-md-48 col-lg-16 employees__item">
-							<a class="employees__item-frame" href="#">
-								<img src="images/pages-images/employees/img-13.jpg" width="112" height="112" alt="" />
-							</a>
-							<span class="employees__item-name">
-								Алексаднрова
-								<br />
-								Зоя
-								<br />
-								Викторовна
-							</span>
-							<span class="employees__item-post">
-								Детский повар
-							</span>
+					<div class="employees__line">
+						<div class="row">
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-11.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Коломицын
+									<br />
+									Андрей
+									<br />
+									Сергеевич
+								</span>
+								<span class="employees__item-post">
+									Начальник службы
+									<br />
+									безопасности
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-12.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Максимов
+									<br />
+									Виталий
+									<br />
+									Кличкович
+								</span>
+								<span class="employees__item-post">
+									Сотрудник службы
+									<br />
+									охраны
+								</span>
+							</div>
+							<div class="col-md-48 col-lg-16 employees__item">
+								<a class="employees__item-frame" href="#">
+									<img src="images/pages-images/employees/img-13.jpg" width="112" height="112" alt="" />
+								</a>
+								<span class="employees__item-name">
+									Алексаднрова
+									<br />
+									Зоя
+									<br />
+									Викторовна
+								</span>
+								<span class="employees__item-post">
+									Детский повар
+								</span>
+							</div>
 						</div>
 					</div>
 				</div>
