--- a/compile/health_article.html
+++ b/compile/health_article.html
@@ -103,39 +103,29 @@
 		<div class="col-md-48 col-lg-12">
 			
 			<ul class="nav leftnav">
-	<li class="leftnav__item active">
-		<a href="about.html">
-			<span class="decorate">О нас</span>
+	<li class="leftnav__item ">
+		<a href="health-article.html">
+			<span class="decorate">Массаж для детей и взрослых</span>
 		</a>
 	</li>
-	<li class="leftnav__item ">
+	<li class="leftnav__item">
 		<a href="">
-			<span class="decorate">Условия приема</span>
+			<span class="decorate">Лечебная физкультура</span>
 		</a>
 	</li>
-	<li class="leftnav__item ">
+	<li class="leftnav__item">
 		<a href="">
-			<span class="decorate">Расположение</span>
+			<span class="decorate">Бассейн +сауна + фитобар</span>
 		</a>
 	</li>
-	<li class="leftnav__item ">
+	<li class="leftnav__item">
 		<a href="">
-			<span class="decorate">Сотрудники</span>
+			<span class="decorate">Йога для малышей</span>
 		</a>
 	</li>
-	<li class="leftnav__item ">
+	<li class="leftnav__item">
 		<a href="docs.html">
-			<span class="decorate">Документы</span>
-		</a>
-	</li>
-	<li class="leftnav__item ">
-		<a href="news.html">
-			<span class="decorate">Новости</span>
-		</a>
-	</li>
-	<li class="leftnav__item ">
-		<a href="health-center.html">
-			<span class="decorate">Оздоровительный центр</span>
+			<span class="decorate">Йога для будущих мам</span>
 		</a>
 	</li>
 </ul>
