--- a/compile/docs.html
+++ b/compile/docs.html
@@ -64,27 +64,27 @@
 		</a>
 	</li>
 	<li class="topnav__item ">
-		<a class="orange" href="">
+		<a class="orange" href="playschool.html">
 			<span class="decorate">Ясли</span>
 		</a>
 	</li>
 	<li class="topnav__item ">
-		<a class="marine" href="">
+		<a class="marine" href="playschool.html">
 			<span class="decorate">Детский сад</span>
 		</a>
 	</li>
 	<li class="topnav__item ">
-		<a class="green" href="">
+		<a class="green" href="playschool.html">
 			<span class="decorate">Начальная школа</span>
 		</a>
 	</li>
 	<li class="topnav__item ">
-		<a href="">
+		<a href="added-services.html">
 			<span class="decorate">Доп. услуги</span>
 		</a>
 	</li>
 	<li class="topnav__item ">
-		<a href="">
+		<a href="contacts.html">
 			<span class="decorate">Контакты</span>
 		</a>
 	</li>
